--- a/src/app/components/displayArticle/displayWidePicture/displayWidePicture.css
+++ b/src/app/components/displayArticle/displayWidePicture/displayWidePicture.css
@@ -1,3 +1,9 @@
+:root {
+    --zoom-time: 1s;
+    --delay-time: 0.5s;
+    --fade-time: 0.5s;
+    --zoom-scale: 1.3;
+}
 .wideContainer {
     display: flex;
     align-items: center;
@@ -20,9 +26,9 @@
     align-items: center;
     opacity: 0;
     color: var(--text-dark-color);
-    animation-delay: var(--zoom-time);
-    -webkit-animation: fade 1s forwards var(--zoom-time) normal 1 ease-in-out;
-    animation: fade 1s forwards var(--zoom-time) 1 normal ease-in-out;
+    animation-delay: var(--delay-time);
+    -webkit-animation: fade 1s forwards var(--delay-time) normal 1 ease-in-out;
+    animation: fade 1s forwards var(--delay-time) 1 normal ease-in-out;
 }
 @-webkit-keyframes fade {
     100% {
@@ -74,9 +80,4 @@
     .wideImage {
         width: 100vw !important;
     }
-}
-:root {
-    --zoom-time: 1.5s;
-    --fade-time: 1.0s;
-    --zoom-scale: 1.3;
 }
