--- a/src/app/components/navbar/navbar.css
+++ b/src/app/components/navbar/navbar.css
@@ -6,9 +6,8 @@
 .animateT {
     -webkit-transition: all 0.4s ease;
     transition: all 0.4s ease;
-    background-color: var(--element-dark-bg-color) !important;
+    background-color: var(--dark-color) !important;
 }
-
 .navbar-container {
     display: flex;
     align-items: center;
@@ -17,7 +16,7 @@
     padding: 18px 15px;
     position: fixed;
     top: 0;
-    background-color: var(--element-dark-bg-color);
+    background-color: var(--dark-color);
     width: 100%;
     z-index: 4;
 }
