--- a/src/app/views/paypal/paypal.css
+++ b/src/app/views/paypal/paypal.css
@@ -1,29 +1,3 @@
-.marginTopHeader {
-    margin-top: 56px;
-}
-.outerContainer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-}
-.centeredContainer{
-    width: 50%;
-}
-/* makes images always stay their format while never pushing boundries */
-.tableCellDynamic img {
-    display: inline-block;
-    max-width: 100%;
-    width: auto;
-    height: auto;
-}
-@media only screen and (max-width: 760px) {
-    .marginTopHeader {
-        padding-top: 30px;
-        margin-top: 0px !important;
-        height: 100%;
-    }
-    .centeredContainer{
-        width: calc(100% - 64px) !important;
-    }
+.paypalplus-container {
+    padding-top: 100px;
 }
