--- a/src/app/views/produkte/produkte.css
+++ b/src/app/views/produkte/produkte.css
@@ -1,13 +1,41 @@
-* {
-    margin: 0;
-    padding: 0;
+.prodcuts-container {
+    margin: 20% 20%;
+    padding-top: 60px;
+    width: 1200px;
+    height: 500px;
+    background-color: blue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
 }
+.product {
+    cursor: pointer;
+    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+.product-bild {
+    width: 300px;
+    height: 300px;
+}
+
+
+
+
+
+
+
 .header {
-position: absolute;
-top: 120px;
-right: 850px;
-color: green;
-font-family: Arial;
+    position: absolute;
+    top: 120px;
+    right: 850px;
+    color: green;
+    font-family: Arial;
 }
 .Textzug1 {
     position: absolute;
