--- a/src/app/views/default/default.css
+++ b/src/app/views/default/default.css
@@ -1,13 +1,10 @@
-.marginTopHeader {
-    margin-top: 56px;
-}
-.outerContainer{
+.outerArticleContainer{
     display: flex;
     justify-content: center;
     align-items: center;
     align-content: center;
 }
-.centeredContainer{
+.centeredArticleContainer{
     width: 50%;
 }
 /* makes images always stay their format while never pushing boundries */
@@ -18,11 +15,6 @@
     height: auto;
 }
 @media only screen and (max-width: 760px) {
-    .marginTopHeader {
-        padding-top: 30px;
-        margin-top: 0px !important;
-        height: 100%;
-    }
     .centeredContainer{
         width: calc(100% - 64px) !important;
     }
