--- a/src/app/components/body/navigation/sidebar/sidebar.css
+++ b/src/app/components/body/navigation/sidebar/sidebar.css
@@ -3,7 +3,7 @@
     width: 50%;
     position: fixed;
     z-index: 3;
-    padding-top: 62px;
+    padding-top: var(--navbar-height);
     right: -50%;
     background-color: var(--element-dark-bg-color);
     overflow: hidden;
