--- a/src/app/main.css
+++ b/src/app/main.css
@@ -1,6 +1,7 @@
 .main-container {
     width: 100vw !important;
     overflow: hidden;
+    min-height: 100vh;
 }
 
 .hide{
@@ -65,6 +66,6 @@ body {
 }
 @media screen and (min-width: 1200px)   {
     .main-container {
-        padding-top: 62px;
+        padding-top: var(--navbar-height);
     }
 }
