--- a/src/app/views/produkte/produkte.css
+++ b/src/app/views/produkte/produkte.css
@@ -1,62 +1,28 @@
-/* .prodcuts-container {
-    margin: 20% 20%;
-    padding-top: 60px;
-    width: 1200px;
-    height: 500px;
-    background-color: blue; 
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-}
-.product {
-    cursor: pointer;
-    display: block;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-}
-.product-bild {
-    width: 200px;
-    height: 200px;
-    border: 1px;
-    border-color:red;
-} */
-
 .mobile {
     flex-direction: column;
 }
-.card-outerframe {
-    width: 100%;
-    padding: 0px var(--outer-frame-padding);
+.product-outerframe {
+    min-height: 100vh;
+}
+
+.product-parent {
     max-width: var(--max-width-container);
-    margin: auto;
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 100%;
 }
-
-.card-parent {
-    display: flex;
-    flex-wrap: wrap;
-    height: 100%;
-    justify-content: center;
-}
-.card-container {
+.product-container {
     display: flex;
     align-items: center;
     flex-direction: column;
     /* justify-items: center; */
     flex-grow: 1;
     overflow: hidden;
-    margin: var(--card-margin);
-    padding: var(--card-padding);
+    margin: var(--product-margin);
+    cursor: pointer;
 }
-.card-image-wrapper {
-    display: block;
+.product-image-wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -64,140 +30,101 @@
     height: 100%;
     width: 100%;
 }
-.card-image {
+.product-image {
     margin: auto;
     width: 100%;
 }
-.card-titleframe {
+.product-textframe {
     z-index: 2;
     padding: 5px;
     display: block;
-}
-/* todo flex box align item */
-.card-title {
     color: var(--text-dark-color);
     font-weight: normal;
     width: 100%;
-    text-align: center; 
-    overflow: hidden;
+    text-align: center !important; 
 }
-.card-container:hover {
+.product-name {
+    margin: 0px !important;
+}  
+.product-price-text {
+    display: inline;
+}   
+/* choose good font make it just a little slimmer */
+.product-price {
+    display: inline;
+    /* font-weight: 150; */
+} 
+/* todo flex box align item */
+.product-container:hover {
     position: relative;
-    -webkit-animation: activeCard 0.2s forwards  normal ease-in-out;
-    animation: activeCard 0.2s forwards  normal ease-in-out;
-}
-.card-container:not(:hover) {
-    position: relative;
-    -webkit-animation: notActiveCard 0.2s forwards  normal ease-in-out;
-    animation: notActiveCard 0.2s forwards  normal ease-in-out;
+    /*color changes*/
 }
 
 :root {
     /* Margins */
-    --card-margin: 5px;
-    --card-padding: 8px;
-    --card-landscape-width: 21vw;
-    --card-mobile-width: 40vw;
-    /* --card-margin-total: calc(var(--card-margin) * 2); */
+    --product-margin: 5px;
+    --product-padding: 8px;
+    --product-landscape-width: 30vw;
+    --product-mobile-width: 40vw;
+    /* --product-margin-total: calc(var(--product-margin) * 2); */
     /* Card Active Hover Settings */
     /* Boxshadows */
-    --card-small-bs: 0 4px 8px 0 rgba(0,0,0,0.2);
-    --card-light-bs: 0 8px 16px 0 rgba(0,0,0,0.2);
+    --product-small-bs: 0 4px 8px 0 rgba(0,0,0,0.2);
+    --product-light-bs: 0 8px 16px 0 rgba(0,0,0,0.2);
     /* Movement */
-    --card-move-up: -0.3vh;
-    --card-move-down: 0.3vh;
+    --product-move-up: -0.3vh;
+    --product-move-down: 0.3vh;
 }
 
 @media screen and (orientation: landscape) {
-    .card-outerframe {
-        height: 100%;
+    .product-outerframe {
+        min-height: calc(100vh - var(--navbar-height));
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
-    .card-parent {
+    .product-parent {
         flex-direction: row;
-        width: 100%;
     }
-    .card-container {
-        width: var(--card-landscape-width);
-        /* height: var(--card-landscape-width); */
+    .product-image-wrapper {
+        width: var(--product-landscape-width);
+        /* height: var(--product-landscape-width); */
         max-width:480px;
         max-height:480px;
     }
   }
   
   @media screen and (orientation: portrait) {
-    .card-outerframe {
+    .product-outerframe {
         height: 150vw;
     }
-    .card-parent {
+    .product-parent {
         flex-direction: column;
         width: 100%;
     }
-    .card-container {
-        margin: var(--card-margin);
-        width: var(--card-mobile-width);
-        /* height: var(--card-mobile-width); */
+    .product-container {
+        width: var(--product-mobile-width);
+    }
+    .product-image-wrapper {
+        margin: var(--product-margin);
+        width: var(--product-mobile-width);
+        /* height: var(--product-mobile-width); */
     }
   }
   @media screen and (max-width: 480px) and (orientation: portrait) {
-    .card-outerframe {
+    .product-outerframe {
         height: 100%;
     }
-    .card-parent {
+    .product-parent {
         flex-direction: row;
         width: 100%;
     }
-    .card-container {
-        margin: var(--card-margin);
+    .product-container {
+        width: calc(100vw - 10px);
+    }
+    .product-image-wrapper {
+        margin: var(--product-margin);
         width: calc(100vw - 10px);
         height: calc(100vw - 10px);
     }
   }
-
-@-webkit-keyframes activeCard {
-    0% {
-        top: 0px;
-        color:var(--text-dark-color);
-        box-shadow: var(--card-small-bs);
-    }
-    100% {
-        top:  var(--card-move-up);
-        color: var( --text-dark-active-color);
-        box-shadow: var(--card-light-bs);
-    }
-}
-@keyframes activeCard {
-    0% {
-        top: 0px;
-        color: var(--text-dark-color);
-        box-shadow: var(--card-small-bs);
-    }
-    100% {
-        top: var(--card-move-up);
-        color: var( --text-dark-active-color);
-        box-shadow: var(--card-light-bs);
-    }
-}
-@-webkit-keyframes notActiveCard {
-    0% {
-        top: 0px;
-        color: var( --text-dark-active-color);
-        box-shadow: var(--card-light-bs);
-    }
-    100% {
-        top: var(--card-move-down);
-        color: var(--text-dark-color);
-        box-shadow: 0;
-    }
-}
-@keyframes notActiveCard {
-    0% {
-        top: 0px;
-        color: var( --text-dark-active-color);
-        box-shadow: var(--card-light-bs);
-    }
-    100% {
-        top: var(--card-move-down);
-        color: var(--text-dark-color);
-        box-shadow: 0;
-    }
-}
