--- a/src/app/views/warenkorb/warenkorb.css
+++ b/src/app/views/warenkorb/warenkorb.css
@@ -5,6 +5,7 @@
     min-height: 100vh;
 }
 .warenkorb-container {
+    min-height: calc(100vh - var(--navbar-height));
     display: flex;
     justify-content: center;
     background-color: white;
@@ -13,8 +14,6 @@
     display: flex;
     flex-direction: column;
     max-width: 1200px;
-}
-.warenkorb-items {
 }
 .warenkorb-parent {
     width: 50vw;
@@ -51,7 +50,7 @@
     margin: 0px !important;
 }  
 .warenkorb-price-text {
-    display: inline;
+    display: block;
 }   
 /* choose good font make it just a little slimmer */
 .warenkorb-price {
@@ -62,6 +61,34 @@
     width: 100%;
     text-align: right;
 }
+.warenkorb-sum {
+    width: 50vw;
+    max-width: 1000px;
+    height: var(--warekorb-item-height);
+    padding: var(--warenkorb-padding);
+    border-top: 1px solid lightgrey;
+    width: 100%;
+    text-align: right;
+}
+.warekorb-btn {
+    max-width: 120px;
+    display: block;
+}
+.marginLeft {
+    margin-left: auto;
+    margin-top: auto;
+    padding-right: var(--warenkorb-padding)
+}
+.warenkorb-placeholder {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   font-size: 200px;;
+}
+.warenkorb-placeholder > p {
+    font-size: 50px !important;
+ }
+
 /* todo flex box align item */
 .warenkorb-container:hover {
     position: relative;
