--- a/src/app/components/body/displayArticle/displayWidePicture/displayWidePicture.css
+++ b/src/app/components/body/displayArticle/displayWidePicture/displayWidePicture.css
@@ -5,12 +5,13 @@
     --zoom-scale: 1.3;
 }
 .wideContainer {
+    position: absolute;
+    top: 0;
     display: flex;
     align-items: center;
     flex-direction: row;
     flex-grow: 1;
     justify-content: center;
-    margin-bottom: 150px;
 }
 
 .textBox {
