--- a/src/app/views/warenkorb/warenkorb.css
+++ b/src/app/views/warenkorb/warenkorb.css
@@ -5,7 +5,7 @@
     min-height: 100vh;
 }
 .warenkorb-container {
-    min-height: calc(100vh - var(--navbar-height));
+    min-height: var(--calc-min-height);
     display: flex;
     justify-content: center;
     background-color: white;
@@ -114,7 +114,7 @@
 
 @media screen and (orientation: landscape) {
     .warenkorb-outerframe {
-        min-height: calc(100vh - var(--navbar-height));
+        min-height: var(--calc-min-height);
         display: flex;
         align-items: center;
         justify-content: center;
